Planering och skiss första lektionen
Jag har idag gjort skisser och brainstormat idéer.

--- a/misc/dokumentation.html
+++ b/misc/dokumentation.html
@@ -14,6 +14,10 @@
         table, td, th {
             border: 1px solid black
         }
+        img {
+            width: 500px;
+            height: 500px;
+        }
     </style>
 
 </head>
@@ -23,14 +27,25 @@
 
     <h2>1. Idébeskrivning</h2>
     <!-- Vad ska du göra? Vilken är din målgrupp? Om du utvecklar en tidigare sida; Vad ska du förändra/utveckla? -->
-
+    <h4>Mine idé kommer vara att göra en resturang till familjer med småbarn. Det kommer vara en tydlig meny
+    på min hemsida som kommer visa vilka olika rätter det finns på min fina resturang. Jag kommer inte ha en
+    annan tidigare sida som grund då jag tycker att jag lär mig mer och mer och kan förmedla min kod på ett bättre
+    sätt nu. Jag vet inte vilket namn jag kommer ha på min resturang men på hemsidan kommer det finnas ett runt
+    emblem och en "banner" som ger min hemsida lite mer liv. Mitt tema till resturangen är barnmat. Detta kommer endast
+    finnas 4 olika vuxenmåltider och extremt mycket barnmat. Detta kommer göra så att barnen kommer älska min resturang
+    och alla föräldrar kommer vilja gå till min resturang för att se barnen glada. Temat på hemsidan kommer vara
+    med färgerna baby blue och baby pink.<h4>
     <h2>2. Planering</h2>
-
+    <h4>Min planering till denna uppgift är att alltid köra 100% på lektionerna. Jag ska också försöka skriva på min hemsida
+    hemma också för att verkligen få den hemsidan min resturang förtjänar.<h4>
     <h3>2.1 Handskiss</h3>
     <!-- Här lägger du en bild på din handskiss av layouten. Viktigt att du beskriver vilka boxelement som ska användas. Visa även hur du tänker med ditt grid (Hur många kolumner?) -->
-
+    <img src="../img/image0 (6).jpeg" alt="Skiss1">
+    <img src="../img/image1.jpeg" alt="Skiss2">
     <h3>2.2 Schema</h3>
     <!-- Vad ska du göra när? Inte för detaljerat. -->
+    <h4> Jag tänker att det mesta gör jag under lektionstid men om jag antingen känner för det eller känner
+    mig stressad skriver jag kod hemma också.<h4>
 
     <table>
         <tr>
@@ -40,7 +55,7 @@
         <tr>
             <td>4</td>
             <td>
-            <!-- Vad görs på lektionen vecka 4? -->
+            <!-- Vad görs på lektionen vecka 4? --> 
             </td>
             <td>
             <!-- Vad görs utanför lektionen vecka 4? -->
@@ -135,6 +150,11 @@
 
     <h3>Lektion vecka 4</h3>
     <!-- Fyll på med dokumentation här. -->
+    Idag har jag brainstormat. Än så länge har jag
+    kommit på att min resturang ska ha temat barnmat så att alla barn blir nöjda med sin mat. Jag har
+    än så länge gjort två skisser till startsidan och menyn. Jag ska försöka göra sista skissen samt
+    lite kod innan nästa lektion har böjat. Jag ska också skriva in mitt schema så att jag vet vad som ska
+    ha gjorts så jag inte hamnar efter och blir stressad.
 
     <h3>Lektion vecka 5</h3>
     <!-- Fyll på med dokumentation här. -->
