--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
 <!--todo-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kids choice</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body id="body">
+<header class="header"><h1>KIDS CHOICE.
+    <div class="search">
+        <input type="text" placeholder="Sök..." class="search-input">
+        <button class="search-button">&#128269;</button>
+    </div>
+
+</h1></header>
+<section class="section1">
+<nav class="nav1">Meny</nav>
+<nav class="nav2">Boka tid</nav>
+<nav class="nav3">Nya måltider</nav>
+<nav class="nav4">Om oss</nav>
+<nav class="nav5">Take away</nav>
+<nav class="nav6">Vanliga frågor</nav>
+</section>
+<div class="div1"><h2>Välkommna till Kids choice! En resturang ditt barn älskar.</h2></div>
+<div class="div2">Populära måltider:</div>
+<section class="section2">
+    <article class="atricle1"> <img src="/img/spaghetti-bolognese-recipe.jpg" alt="Pasta"></article>
+    <article class="atricle2"> <img src="/img/meatballs.jpg" alt="Köttbullar"></article>
+    <article class="atricle3"> <img src="/img/dutch-mini-pancakes-5-500x500.jpg" alt="Pannkakor"></article>
+    <article class="atricle4"> <img src="/img/fish n chips.jpg" alt="Fish"></article>
+    <article class="atricle5"> <img src="/img/tacos.jpg" alt="Tacos"></article>
+    <article class="atricle6"> <img src="/img/Hamburgare.jfif" alt="Hamburgare"></article>
+</section>
+<footer class="footer1">Snabbinfo:</footer>
+
+
+
+</body>
+</html>
