--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 </h1></header>
 <section class="section1">
-<nav class="nav1">Meny</nav>
-<nav class="nav2">Boka tid</nav>
+<nav class="nav1"> <a href="meny.html">Meny</a></nav>
+<nav class="nav2"> <a href="boka.html">Boka tid</a> </nav>
 <nav class="nav3">Nya måltider</nav>
 <nav class="nav4">Om oss</nav>
 <nav class="nav5">Take away</nav>
@@ -26,15 +26,15 @@
 <div class="div1"><h2>Välkommna till Kids choice! En resturang ditt barn älskar.</h2></div>
 <div class="div2">Populära måltider:</div>
 <section class="section2">
-    <article class="atricle1"> <img src="/img/spaghetti-bolognese-recipe.jpg" alt="Pasta"></article>
-    <article class="atricle2"> <img src="/img/meatballs.jpg" alt="Köttbullar"></article>
-    <article class="atricle3"> <img src="/img/dutch-mini-pancakes-5-500x500.jpg" alt="Pannkakor"></article>
-    <article class="atricle4"> <img src="/img/fish n chips.jpg" alt="Fish"></article>
-    <article class="atricle5"> <img src="/img/tacos.jpg" alt="Tacos"></article>
-    <article class="atricle6"> <img src="/img/Hamburgare.jfif" alt="Hamburgare"></article>
+    <article class="atricle1"> <img src="/img/spaghetti-bolognese-recipe.jpg" alt="En bild på en pastarätt"></article>
+    <article class="atricle2"> <img src="/img/meatballs.jpg" alt="En bild på köttbullar"></article>
+    <article class="atricle3"> <img src="/img/dutch-mini-pancakes-5-500x500.jpg" alt="En bild på pannkakor"></article>
+    <article class="atricle4"> <img src="/img/fish n chips.jpg" alt="En bild på fish and chips"></article>
+    <article class="atricle5"> <img src="/img/tacos.jpg" alt="En bild på tacos"></article>
+    <article class="atricle6"> <img src="/img/Hamburgare.jfif" alt="En bild på hamburgare"></article>
 </section>
-<footer class="footer1">Snabbinfo:</footer>
-
+<footer class="footer1">Snabbinfo:<br> Adess: Älvängen 3        Telefonnummer: +46 72 123 12 34</footer>
+<div class="div3"> </div>
 
 
 </body>
