--- a/misc/dokumentation.html
+++ b/misc/dokumentation.html
@@ -148,7 +148,7 @@
     <h2>3. Dokumentation</h2>
     <!-- Här skriver du efter varje lektion. Vad har jag gjort? Vad gick bra? Vad gick mindre bra? Vad ska jag tänka på till nästa gång? -->
 
-    <h3>Lektion vecka 4</h3>
+    <h3>Lektion vecka 47</h3>
     <!-- Fyll på med dokumentation här. -->
     Idag har jag brainstormat. Än så länge har jag
     kommit på att min resturang ska ha temat barnmat så att alla barn blir nöjda med sin mat. Jag har
@@ -156,8 +156,19 @@
     lite kod innan nästa lektion har böjat. Jag ska också skriva in mitt schema så att jag vet vad som ska
     ha gjorts så jag inte hamnar efter och blir stressad.
 
-    <h3>Lektion vecka 5</h3>
+    Mellan lektionen vecka 47 och 48 har jag jobbat med min startsida. Den är snart klar, några små ändringar
+    kvar. Jag har utgått från min skiss.
+    <h3>Lektion vecka 48</h3>
     <!-- Fyll på med dokumentation här. -->
+    Idag har jag kollat igenom vad jag har gjort på min hemsida än så länge. Jag har också lagt till två extra
+    hml sidor samt lagt en länk till dem sidorna i min nav. Idag har jag också testat mina kontraster på text och
+    bakgrund och kom fram till att jag ska lägga till en box runt min text i headern för att få en tydligare och
+    synligare text. Min bakgrund till headern är en bild och det kan därför vara svårt att hitta en färg som passar till
+    alla olika färger i bakgrunden.
+    Det som har gått bra idag är att jag fröskt hitta nya saker att förbättra på det jag än så länge har gjort.
+    Det som gick mindre bra idag var att det var svårt att jag har varit lite lat idag då jag kände att jag har kommit än så länge
+    väldigt långt och då hamnar man oftast på latsidan. Jag ska förbättra detta genom att både ta in tid hemma samt jobba till
+    100% nästa lektion.
 
     <h3>Lektion vecka 6</h3>
     <!-- Fyll på med dokumentation här. -->
