--- a/misc/dokumentation.html
+++ b/misc/dokumentation.html
@@ -168,10 +168,14 @@
     Det som har gått bra idag är att jag fröskt hitta nya saker att förbättra på det jag än så länge har gjort.
     Det som gick mindre bra idag var att det var svårt att jag har varit lite lat idag då jag kände att jag har kommit än så länge
     väldigt långt och då hamnar man oftast på latsidan. Jag ska förbättra detta genom att både ta in tid hemma samt jobba till
-    100% nästa lektion.
+    100% nästa lektion. 
 
     <h3>Lektion vecka 6</h3>
     <!-- Fyll på med dokumentation här. -->
+
+    Idag har jag jobbat mycket med css och fått fram några snygga estetiska saker på min resturang hemsida.
+    Jag tycker att arbetet har flytit på bra idag och jag känner mig nöjd med vad jag har gjort. Jag har också
+    lagt till några mer bilder till min meny sida.
 
     <h3>Lektion vecka 8</h3>
     <!-- Fyll på med dokumentation här. -->
