--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body id="body">
-<header class="header"><h1>KIDS CHOICE.
+
+
+<header class="header"><h1 class="bakgrund">KIDS CHOICE.</h1>
+
+
     <div class="search">
         <input type="text" placeholder="Sök..." class="search-input">
         <button class="search-button">&#128269;</button>
     </div>
 
-</h1></header>
+</header>
 <section class="section1">
 <nav class="nav1"> <a href="meny.html">Meny</a></nav>
 <nav class="nav2"> <a href="boka.html">Boka tid</a> </nav>
@@ -23,13 +27,13 @@
 <nav class="nav5">Take away</nav>
 <nav class="nav6">Vanliga frågor</nav>
 </section>
-<div class="div1"><h2>Välkommna till Kids choice! En resturang ditt barn älskar.</h2></div>
+<div class="div1"><h2 class="boarder">Välkommna till Kids choice! En resturang ditt barn älskar.</h2></div>
 <div class="div2">Populära måltider:</div>
 <section class="section2">
     <article class="atricle1"> <img src="/img/spaghetti-bolognese-recipe.jpg" alt="En bild på en pastarätt"></article>
     <article class="atricle2"> <img src="/img/meatballs.jpg" alt="En bild på köttbullar"></article>
     <article class="atricle3"> <img src="/img/dutch-mini-pancakes-5-500x500.jpg" alt="En bild på pannkakor"></article>
-    <article class="atricle4"> <img src="/img/fish n chips.jpg" alt="En bild på fish and chips"></article>
+    <article class="atricle4"> <img src="/img/fishandchips.jpg" alt="En bild på fish and chips"></article>
     <article class="atricle5"> <img src="/img/tacos.jpg" alt="En bild på tacos"></article>
     <article class="atricle6"> <img src="/img/Hamburgare.jfif" alt="En bild på hamburgare"></article>
 </section>
