--- a/misc/dokumentation.html
+++ b/misc/dokumentation.html
@@ -170,15 +170,19 @@
     väldigt långt och då hamnar man oftast på latsidan. Jag ska förbättra detta genom att både ta in tid hemma samt jobba till
     100% nästa lektion. 
 
-    <h3>Lektion vecka 6</h3>
+    <h3>Lektion vecka 49</h3>
     <!-- Fyll på med dokumentation här. -->
 
     Idag har jag jobbat mycket med css och fått fram några snygga estetiska saker på min resturang hemsida.
     Jag tycker att arbetet har flytit på bra idag och jag känner mig nöjd med vad jag har gjort. Jag har också
     lagt till några mer bilder till min meny sida.
 
-    <h3>Lektion vecka 8</h3>
+    <h3>Lektion vecka 50</h3>
     <!-- Fyll på med dokumentation här. -->
+    Idag var det den första distanslektionen och jag tyckte att det gick väldigt bra. Jag har dels börjat med att jobba
+    på min logga som man ska göra själv i photoshop. Jag har också ändrat nu så att jag endast har en css nu. Det tog lite tid
+    att ändra men nu är det gjort och det känns väldigt praktiskt nu i efterhand att endast ha 1. Jag har också jobbat på min sista
+    html sidan som snart börjar bli klar.
 
     <h3>Lektion vecka 9</h3>
     <!-- Fyll på med dokumentation här. -->
