--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <body id="body">
 
 
-<header class="header"><h1 class="bakgrund">KIDS CHOICE.</h1>
-
+<header class="header">
+    <div>
+        <img class="logga" src="img/loggatest.png" alt="Resturangens logga">
+    </div>
+    <h1 class="bakgrund">KIDS CHOICE.</h1>
 
     <div class="search">
         <input type="text" placeholder="Sök..." class="search-input">
@@ -37,7 +40,7 @@
     <article class="atricle5"> <img src="/img/tacos.jpg" alt="En bild på tacos"></article>
     <article class="atricle6"> <img src="/img/Hamburgare.jfif" alt="En bild på hamburgare"></article>
 </section>
-<footer class="footer1">Snabbinfo:<br> Adess: Älvängen 3        Telefonnummer: +46 72 123 12 34</footer>
+<footer class="footer1">Snabbinfo:<br> Adress: Älvängen 3        Telefonnummer: +46 72 123 12 34</footer>
 <div class="div3"> </div>
 
 
