--- a/misc/dokumentation.html
+++ b/misc/dokumentation.html
@@ -42,6 +42,7 @@
     <!-- Här lägger du en bild på din handskiss av layouten. Viktigt att du beskriver vilka boxelement som ska användas. Visa även hur du tänker med ditt grid (Hur många kolumner?) -->
     <img src="../img/image0 (6).jpeg" alt="Skiss1">
     <img src="../img/image1.jpeg" alt="Skiss2">
+    <img src="../img/Skiss 3.jpeg" alt="Skiss3">
     <h3>2.2 Schema</h3>
     <!-- Vad ska du göra när? Inte för detaljerat. -->
     <h4> Jag tänker att det mesta gör jag under lektionstid men om jag antingen känner för det eller känner
@@ -184,9 +185,12 @@
     att ändra men nu är det gjort och det känns väldigt praktiskt nu i efterhand att endast ha 1. Jag har också jobbat på min sista
     html sidan som snart börjar bli klar.
 
-    <h3>Lektion vecka 9</h3>
+    <h3>Lektion vecka 51</h3>
     <!-- Fyll på med dokumentation här. -->
-
+    Jag har jobbat på hemsidan utanför skolan och blev precis klar. Det jag gjorde utanför skolan var småjussteringar. Jag har också gjort klart skiss3
+    samt att jag har gjort klart min logga med hjälp utav photoshop. Jag känner mig nöjd med min hemsida och jag har kollat så att man ser alla kontraster i färgerna samt att ha validerat min kod så att
+    det fungerar och ser bra ut.
+    Jag har också gjort en skärminspelning så du ser hur det ser ut från mitt perspektiv på min dator.
     <h3>Lektion vecka 10</h3>
     <!-- Fyll på med dokumentation här. -->
 
@@ -198,11 +202,29 @@
 
     <h2>4. Testning</h2>
     <!-- Testa i Chrome + Firefox eller Safari (på både dator och mobil). Skiljer sig resultatet? Har du behövt anpassa ditt kod/innehåll efter de olika webbläsarna? Hur gick valideringen? Vad säger contrastchecker.com om text/bakgrundsfärg? Hur ser resultatet ut på en riktig telefon? -->
+    <img src="../img/Validera html.PNG" alt="Valedering av html">
+    <img src="../img/Validera html 2.PNG" alt="Valedering av html 2">
+    <img src="../img/Validera html 3.PNG" alt="Valedering av html 3">
+    <img src="../img/Validera css.PNG" alt="Valedering av css">
+    <img src="../img/Contrast checker.PNG" alt="Contrast checker">
+    <img src="../img/Contrast 2.PNG" alt="Contrast checker 2">
+    <img src="../img/Microsoft Edge.PNG" alt="Test Microsoft Edge">
+    <img src="../img/Firefox.PNG" alt="Test Firefox">
 
     <h2>5. Utvärdering</h2>
     <!-- Ex: Vad gick bra/mindre bra? (i arbetet/din förmåga).
     Nyanserat: "hur hade det blivit om jag istället hade...?"
     Konkreta förbättringsförslag i produkt + process. -->
+    Jag tyckte det gick väldigt bra faktiskt. Processen har gått framåt och jag har faktiskt inte stött på några problem.
+    Det som gick mindre bra var nog photoshop, jag fick sitta med det en stund för att komma på hur man skulle göra men allt slutade
+    iallafall med att jag kom på det och jag är nöjd med min logga. En sak jag hade ändrat på om jag kommer göra om detta arbetet är nog
+    att jag skulle ha gjort en bättre planering genom att både arbeta lite hela tiden med min hemsida. Nu blev det lite stressigt när jag först inte visste
+    hur man skulle göra en speciell sak på photoshop. När det tog mer tid än förväntat så blev mina planer för mina andra inlämningar skjutna på och jag blev lite stressad.
+    Förbättringar kring min process och produkt kan vara att inte bli stressad och lite förbannad när det inte går enligt planerna. När till exempel inte google vill sammarbeta.
+    Det var också riktigt skönt att min hemsida funkade på 3 stycken olika webbläsare. Jag vet att bilderna ovanför här är väldigt dåliga men jag vet att det fungerar på varje webbläsare så om du vill att jag antingen
+    lägger in dem i classroom eller på mail så är det bara att säga till.
+
+
 
 </body>
 </html>
