Detta är den färdiga produkten, färdig och klar
Nu är detta sista gången

--- a/meny.html
+++ b/meny.html
@@ -30,16 +30,16 @@
         </section>
         <div class="div1"><h2>Menyn:</h2></div>
         <section class="section3">
-            <article class="atricle1"> <img src="/img/spaghetti-bolognese-recipe.jpg" alt="En bild på en pastarätt"></article>
-            <article class="atricle2"> <img src="/img/meatballs.jpg" alt="En bild på köttbullar"></article>
-            <article class="atricle3"> <img src="/img/dutch-mini-pancakes-5-500x500.jpg" alt="En bild på pannkakor"></article>
-            <article class="atricle4"> <img src="/img/fishandchips.jpg" alt="En bild på fish and chips"></article>
-            <article class="atricle5"> <img src="/img/tacos.jpg" alt="En bild på tacos"></article>
-            <article class="atricle6"> <img src="/img/Hamburgare.jfif" alt="En bild på hamburgare"></article>
-            <article class="article7"> <img src="/img/Pizza.jpg" alt="En bild på en pizza"> </article>
-            <article class="article8"> <img src="/img/hotdog.jpg" alt="En bild på en varmkorv"> </article>
-            <article class="article9"> <img src="/img/Chickennugget.jfif" alt="En bild på chicken nuggets"> </article>
-            <article class="article10"> <img src="/img/fishgratin.jpg" alt="En bild på fisk gratäng"> </article>
+            <article class="atricle1" > <img class="bilder" src="/img/spaghetti-bolognese-recipe.jpg" alt="En bild på en pastarätt"></article>
+            <article class="atricle2" > <img class="bilder" src="/img/meatballs.jpg" alt="En bild på köttbullar"></article>
+            <article class="atricle3"> <img class="bilder" src="/img/dutch-mini-pancakes-5-500x500.jpg" alt="En bild på pannkakor"></article>
+            <article class="atricle4" > <img class="bilder" src="/img/fishandchips.jpg" alt="En bild på fish and chips"></article>
+            <article class="atricle5" > <img class="bilder" src="/img/tacos.jpg" alt="En bild på tacos"></article>
+            <article class="atricle6" > <img class="bilder" src="/img/Hamburgare.jfif" alt="En bild på hamburgare"></article>
+            <article class="article7" > <img class="bilder" src="/img/Pizza.jpg" alt="En bild på en pizza"> </article>
+            <article class="article8" > <img class="bilder" src="/img/hotdog.jpg" alt="En bild på en varmkorv"> </article>
+            <article class="article9" > <img class="bilder" src="/img/Chickennugget.jfif" alt="En bild på chicken nuggets"> </article>
+            <article class="article10" > <img class="bilder" src="/img/fishgratin.jpg" alt="En bild på fisk gratäng"> </article>
         </section>
         <footer class="footer1">Snabbinfo:<br> Adess: Älvängen 3        Telefonnummer: +46 72 123 12 34</footer>
 
