--- a/misc/dokumentation.html
+++ b/misc/dokumentation.html
@@ -208,8 +208,9 @@
     <img src="../img/Validera css.PNG" alt="Valedering av css">
     <img src="../img/Contrast checker.PNG" alt="Contrast checker">
     <img src="../img/Contrast 2.PNG" alt="Contrast checker 2">
-    <img src="../img/Microsoft Edge.PNG" alt="Test Microsoft Edge">
-    <img src="../img/Firefox.PNG" alt="Test Firefox">
+    <img src="../img/Microsoft Edge.PNG" alt="Test Microsoft Edge"><br>Test för Microsoft Edge<br>
+    <img src="../img/Firefox.PNG" alt="Test Firefox"><br>Test för Firefox
+    <br>Bilderna är lite otydliga så säg till om du vill ha dem på mail med bättre kvalite.
 
     <h2>5. Utvärdering</h2>
     <!-- Ex: Vad gick bra/mindre bra? (i arbetet/din förmåga).
@@ -222,10 +223,7 @@
     hur man skulle göra en speciell sak på photoshop. När det tog mer tid än förväntat så blev mina planer för mina andra inlämningar skjutna på och jag blev lite stressad.
     Förbättringar kring min process och produkt kan vara att inte bli stressad och lite förbannad när det inte går enligt planerna. När till exempel inte google vill sammarbeta.
     Det var också riktigt skönt att min hemsida funkade på 3 stycken olika webbläsare. Jag vet att bilderna ovanför här är väldigt dåliga men jag vet att det fungerar på varje webbläsare så om du vill att jag antingen
-    lägger in dem i classroom eller på mail så är det bara att säga till. Jag fick ett litet problem idag dock. Allting var bra och jag har en video på det också men helt plötsligt var bilderna lite för stor och
-    det ser inte bra ut. Jag kan lägga in en video där det är helt perferkt men det finns en vit ruta i "meny" som jag ändrade bakgrundfärgen till. Jag vet inte hur jag skulle lösa det vilket var lite tråkigt. Jag skickar både videon där den är klar och videon där den är inprincip klar men en grid som ändrades bakgrundfärg.
-
-
+    lägger in dem i classroom eller på mail så är det bara att säga till. Jag fick ett litet problem idag dock. Allt var helt perfekt men så blev bilderna för stora helt plötsligt men jag löste det och jag kände mig riktigt nöjd efter det.
 
 </body>
 </html>
